--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="library/p5.min.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
+  <script src="Crab.js"></script>
 </head>
 
 <body>
