--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
   <script src="Crab.js"></script>
+  <script src="human.js"></script>
 </head>
 
 <body>
