Created Cloud object
I will make the cloud interactive

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="sketch.js"></script>
   <script src="Crab.js"></script>
   <script src="human.js"></script>
+  <script src="cloud.js"></script>
 </head>
 
 <body>
